<resources>
    <string name="app_name">Movie Hut</string>
    <string name="movie">Movie</string>
    <string name="hut">Hut</string>
    <string name="image">image</string>
    <string name="favourites">Favourites</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="placeholdertext">TextView</string>
    <string name="add_to_favourites">Add To Favourites</string>
    <string name="release_date">Release Date: </string>
    <string name="remove_from_favourites">Remove From Favourites</string>
    <string name="play">Play</string>
    <string name="silverbird_galleria">SilverBird Galleria</string>
    <string name="film_house_cinema">Film House Cinema</string>
    <string name="genesis_cinema">Genesis Cinema</string>
    <string name="submit">Submit</string>
</resources>
